--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,40 +12,23 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="6">
+        android:weightSum="6" >
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="3">
-
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:text="@string/Admin"
-                android:id="@+id/admin_button"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground" />
+            android:weightSum="3" >
 
             <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:text="@string/Cashier"
-                android:id="@+id/cashier_button"
+                android:id="@+id/cash_sw"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground" />
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:text="@string/Receipt"
-                android:id="@+id/receipt_button"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground" />
         </LinearLayout>
 
         <TextView
@@ -59,15 +42,19 @@
             android:textSize="25dp"
             android:hint="@string/hint"
             android:enabled="false"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColor="@color/btn"
+            android:textColorHint="@color/btn"
+            android:textColorHighlight="@color/btn"
+            android:textColorLink="@color/btn" />
 
         <LinearLayout
-            android:id="@+id/l2"
+            android:id="@+id/linearLayout3"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/btn">
+            android:background="@color/btn" >
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -80,8 +67,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Add_Product"
-                    android:id="@+id/AP"
+                    android:text="@string/Grocery"
+                    android:id="@+id/groc"
                     android:layout_weight="1"
                     android:textSize="12sp"
                     android:background="?android:attr/selectableItemBackground" />
@@ -90,9 +77,9 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/CS"
+                    android:id="@+id/auto"
                     android:layout_weight="1"
-                    android:text="@string/Cancel_Transaction"
+                    android:text="@string/Automotive"
                     android:textSize="12sp"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -100,8 +87,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Print_receipts"
-                    android:id="@+id/PR"
+                    android:text="@string/General"
+                    android:id="@+id/general"
                     android:layout_weight="1"
                     android:textSize="12sp"
                     android:background="?android:attr/selectableItemBackground" />
@@ -110,11 +97,10 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/C"
+                    android:id="@+id/clear"
                     android:layout_weight="1"
                     android:text="@string/Clear"
                     android:textSize="12sp"
-                    android:layout_gravity="center_vertical"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
 
@@ -157,9 +143,10 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/empty"
+                    android:id="@+id/refund"
                     android:layout_weight="1"
-                    android:background="?android:attr/selectableItemBackground" />
+                    android:background="?android:attr/selectableItemBackground"
+                    android:text="@string/Refund" />
             </LinearLayout>
 
             <LinearLayout
@@ -201,8 +188,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Refund"
-                    android:id="@+id/RF"
+                    android:text="@string/gst"
+                    android:id="@+id/gst"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
@@ -246,8 +233,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Change_Tax"
-                    android:id="@+id/MT"
+                    android:text="@string/pst"
+                    android:id="@+id/pst"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
@@ -291,9 +278,9 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/DC"
+                    android:text="@string/total"
+                    android:id="@+id/total"
                     android:layout_weight="1"
-                    android:text="@string/Discount"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
         </LinearLayout>
@@ -302,9 +289,6 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="4dp"
-            android:background="#7d7123"></LinearLayout>
-
-
+            android:background="#7d7123" />
     </LinearLayout>
-
 </LinearLayout>
